# solana-education

./: .env  .gitignore  keypair.json  package-lock.json  package.json  secret.json
deploy/: deploy-manager.js  deploy-nft.js  deploy-spl.js
frontend/: .env.local  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/Modal/: Modal.tsx
frontend/src/components/WalletConnection/: WalletConnection.tsx
frontend/src/constants/: constants.ts
frontend/src/context/: WalletContextProvider.tsx
frontend/src/hooks/: useAnchorProgram.tsx  useBalance.tsx
frontend/src/utils/idl/: idl.json
spl_nft_manager/: Anchor.toml  Cargo.toml  secret.json  secret_old.json
spl_nft_manager/programs/manager/: Cargo.toml
spl_nft_manager/programs/manager/src/: lib.rs
tests/: manager.js
utils/: convertPrivateKey.js  setupClient.js  wallet.js
