[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["associated_token"] }
solana-program = "2.0.13"
time = "0.3.35"

[features]
no-entrypoint = []
test-sbf = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[lib]
crate-type = ["cdylib", "lib"]

